--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@toast-ui/editor": "^3.2.2",
     "next": "16.1.6",
     "openai": "^6.17.0",
     "react": "19.2.3",
