--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.90.20",
     "@toast-ui/editor": "^3.2.2",
     "next": "16.1.6",
+    "next-themes": "^0.4.6",
     "openai": "^6.17.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
