--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.90.20",
     "@toast-ui/editor": "^3.2.2",
     "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
+    "marked": "^17.0.1",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "openai": "^6.17.0",
