--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-themes": "^0.4.6",
     "openai": "^6.17.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
